--- a/src/styles/_general.scss
+++ b/src/styles/_general.scss
@@ -5,7 +5,9 @@
     --secondary_bg: #222725;
     --accent_bg: #161a18;
     --message_bg: #e8711e;
-    --highlights: #fafafa;
+    --highlights: rgba(255, 255, 255, .4);
+    --shadows: rgba(0, 0, 0, .4);
+    --error: #e8711e;
   
 }
 
