Server-front-end real time messagin working, data saved in memory on server

--- a/zephon/src/App.scss
+++ b/zephon/src/App.scss
@@ -96,6 +96,25 @@
   margin: 10px;
   border-radius: 5px;
   background-color: var(--message_bg);
+
+  display: flex;
+  flex-direction: column;
+
+  &.current{
+    background-color: var(--message_bg_current);
+  }
+
+  .sender{
+    font-size: 0.9em;
+  }
+  .text{
+    margin-top: 5px;
+    text-indent: 10px;
+  }
+  .date{
+    font-size: 0.7em;
+    align-self: flex-end;
+  }
 }
 
 @media (max-width: 650px){
