--- a/zephon/src/styles/_general.scss
+++ b/zephon/src/styles/_general.scss
@@ -23,6 +23,7 @@
     --secondary_bg: #080808a1;
     --accent_bg: #131313;
     --message_bg: #222222;
+    --message_bg_current: #111;
     --input_bg: #3030307c;
     --highlights: rgba(255, 255, 255, .4);
     --shadows: rgba(0, 0, 0, .4);
