--- a/zephon/src/styles/App.scss
+++ b/zephon/src/styles/App.scss
@@ -36,25 +36,53 @@ button.side_item{
   flex-direction: row;
   justify-content: space-between;
 
-  &:hover{
-    opacity: 0.6;
-    cursor: pointer;
+  &.buttons{
+    // justify-content: flex-start;
+    // width: 70%;
+    padding: 0;
+
+    border-bottom: 1px solid var(--highlights); 
+    button{
+      // padding-left: 0;
+      padding: 10px;
+      font-size: 15px;
+      flex: 1;
+      height: 100%;
+      justify-content: center;
+      display: flex;
+      align-items: center;
+
+      // padding-right: 50px;
+    }
+    & > :first-child{
+      border-right: 1px solid var(--highlights);
+    }
   }
 
-  & :nth-child(2):hover{
-    opacity: 1;
-    cursor: pointer;
+  &.participants{
+    display: flex;
+    flex-direction: column;
+    cursor: auto;
+    & > span{
+      padding: 5px 0;
+    }
   }
+
+  // &:hover{
+  //   opacity: 0.6;
+  //   cursor: pointer;
+  // }
+
 }
 
 .side_item{
   @include vertical_align();
   border: none;
 
-  // &:hover{
-  //   opacity: 0.6;
-  //   cursor: pointer;
-  // }
+  &:hover{
+    opacity: 0.6;
+    cursor: pointer;
+  }
 
   span{
     font-size: 0.8em;
@@ -71,7 +99,7 @@ button.side_item{
 }
 
 .chat_window{
-  width: 80%;
+  width: 70%;
 }
 
 .message_list{
@@ -108,6 +136,10 @@ button.side_item{
 }
 
 .chat_list{
+  // button{
+  //   display: flex;
+  //   align-items: center;
+  // }
   .search_input{
     width: 100%;
 
@@ -119,19 +151,25 @@ button.side_item{
         @include custom_input;
       }
     }
-
-    button, label{
-      margin: 0;
-      padding: 0 20px;
-      height: auto;
-      overflow: hidden;
-    }
-
-    button{
-      cursor: pointer;
-    }
   }
 }
+
+
+input[type="file"]{
+  display: none;
+}
+
+label{
+  @include centered;
+}
+button, label{
+  margin: 0;
+  padding: 0 20px;
+  height: auto;
+  overflow: hidden;
+  cursor: pointer;
+}
+
 
 .message{
   // width: max-content;
@@ -151,6 +189,11 @@ button.side_item{
 
   .sender{
     font-size: 0.9em;
+    display: flex;
+    justify-content: space-between;
+    button{
+      padding: 0;
+    }
   }
   .text{
     margin-top: 5px;
