Stylesheet organized + started working on the attachment feature

--- a/zephon/src/styles/_predefined.scss
+++ b/zephon/src/styles/_predefined.scss
@@ -27,7 +27,7 @@
     --input_bg: #3030307c;
     --highlights: rgba(255, 255, 255, .4);
     --shadows: rgba(0, 0, 0, .4);
-    --error: #e8711e;
+    --error: #dd0000;
   
 }
 
