--- a/zephon/src/styles/App.scss
+++ b/zephon/src/styles/App.scss
@@ -1,6 +1,11 @@
 
-@import "./general";
-@import "./forms";
+@import "./predefined";
+@import "../components/userDetails/userDetails";
+@import "../components/sidePanel/sidePanel";
+@import "../components/chatWindow/_chatWindow";
+@import "../components/common/common";
+@import "../components/infoPanel/infoPanel";
+
 
 .App {
   height: 100vh;
@@ -11,83 +16,26 @@
   box-sizing: border-box;
 }
 
-.header span{
-  width: 100%;
-  height: 60px;
-  background-color: var(--accent_bg);
-  text-indent: 15px;
-  @include vertical_align();
+input[type="file"]{
+  display: none;
 }
 
-.side_panel, .settings_panel{
+button, label{
+  margin: 0;
+  padding: 0 20px;
+  height: auto;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.centered, .message_input label, img{
+  @include centered;
+}
+
+
+.side_panel, .info_panel{
   width: 30%;
   background-color: var(--secondary_bg);
-}
-
-button.side_item{
-  padding-top: 20px;
-  text-align: left;
-}
-
-.side_container{
-  padding: 10px 20px;
-  margin-bottom: 10px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-
-  &.buttons{
-    // justify-content: flex-start;
-    // width: 70%;
-    padding: 0;
-
-    border-bottom: 1px solid var(--highlights); 
-    button{
-      // padding-left: 0;
-      padding: 10px;
-      font-size: 15px;
-      flex: 1;
-      height: 100%;
-      justify-content: center;
-      display: flex;
-      align-items: center;
-
-      // padding-right: 50px;
-    }
-    & > :first-child{
-      border-right: 1px solid var(--highlights);
-    }
-  }
-
-  &.participants{
-    display: flex;
-    flex-direction: column;
-    cursor: auto;
-    & > span{
-      padding: 5px 0;
-    }
-  }
-
-  // &:hover{
-  //   opacity: 0.6;
-  //   cursor: pointer;
-  // }
-
-}
-
-.side_item{
-  @include vertical_align();
-  border: none;
-
-  &:hover{
-    opacity: 0.6;
-    cursor: pointer;
-  }
-
-  span{
-    font-size: 0.8em;
-  }
-
 }
 
 
@@ -98,118 +46,6 @@ button.side_item{
   overflow-x: hidden;
 }
 
-.chat_window{
-  width: 70%;
-}
-
-.message_list{
-  margin-top: auto;
-  padding-left: 5%;
-  padding-right: 5%;
-  margin-bottom: 20px;
-  overflow-y: auto;
-}
-.empty{
-  @include centered;
-  h2{
-    text-align: center;
-  }
-}
-.message_input{
-  width: 100%;
-  background-color: var(--accent_bg);
-  display: flex;
-
-  input{
-    @include custom_input;
-    &:focus{
-      @include custom_input;
-    }
-  }
-
-  button{
-    margin: 0;
-    padding: 0 20px;
-    height: auto;
-    cursor: pointer;
-  }
-}
-
-.chat_list{
-  // button{
-  //   display: flex;
-  //   align-items: center;
-  // }
-  .search_input{
-    width: 100%;
-
-    input{
-      box-sizing: border-box;
-      width: 80%;
-      @include custom_input;
-      &:focus{
-        @include custom_input;
-      }
-    }
-  }
-}
-
-
-input[type="file"]{
-  display: none;
-}
-
-label{
-  @include centered;
-}
-button, label{
-  margin: 0;
-  padding: 0 20px;
-  height: auto;
-  overflow: hidden;
-  cursor: pointer;
-}
-
-
-.message{
-  // width: max-content;
-  word-break: break-all;
-  max-width: 100%;
-  padding: 15px 20px;
-  margin: 10px;
-  border-radius: 5px;
-  background-color: var(--message_bg);
-
-  display: flex;
-  flex-direction: column;
-
-  &.current{
-    background-color: var(--message_bg_current);
-  }
-
-  .sender{
-    font-size: 0.9em;
-    display: flex;
-    justify-content: space-between;
-    button{
-      padding: 0;
-    }
-  }
-  .text{
-    margin-top: 5px;
-    text-indent: 10px;
-  }
-  .date{
-    font-size: 0.7em;
-    align-self: flex-end;
-  }
-}
-
-@media (max-width: 650px){
-  .settings_panel{
-    display: none;
-  }
-}
 
 // scrollbars
 
