--- a/zephon/src/components/chatWindow/_chatWindow.scss
+++ b/zephon/src/components/chatWindow/_chatWindow.scss
@@ -42,12 +42,12 @@
         display: flex;
         justify-content: space-between;
         button{
-        padding: 0;
+            padding: 0;
         }
     }
     .text{
         margin-top: 5px;
-        text-indent: 10px;
+        text-align: justify;
     }
     .date{
         font-size: 0.7em;
